<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".fragments.AboutUsFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dip"

            android:scaleType="centerCrop"
            android:src="@drawable/bg_image" />

        <ScrollView
            android:id="@+id/dashboard_content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/aboutus_main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/dashboard_logo_layout"
                    android:layout_width="match_parent"
                    android:layout_height="240dip"
                    android:gravity="center"
                    android:orientation="vertical">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="240dip"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/curve_wave_bg_two"
                        android:orientation="vertical">

                        <ImageView

                            android:id="@+id/imageView7"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="70dip"
                            app:srcCompat="@drawable/logo_main_round" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/colorRed"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/application_moto"
                        android:textColor="@color/colorDeepGreen"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dip"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:gravity="center_horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="About This Project"
                                android:textColor="@color/colorPrimary"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:gravity="center_horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_about_us"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="16sp" />

                        </LinearLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dip"
                        android:layout_marginBottom="15dp"
                        android:orientation="horizontal">



                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:gravity="center_horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="ABSTRACT"
                                android:textColor="@color/colorPrimary"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:gravity="center_horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_abstract"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="16sp" />

                        </LinearLayout>
                    </LinearLayout>



                    <!--End of Layer-->

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>